# pywr

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  appveyor.yml  build.bat  build.txt  cliff.toml  deploy.sh  err_perf.html  formulation.html  gen-changelog.sh  genindex.html  github_deploy_key.enc  index.html  install.html  json.html  json_test.py  license.html  mkdocs.yml  model.json  objects.inv  py-modindex.html  pyproject.toml  pywr.py  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test.py  test_xml.py  tutorial.html  xmlutils.py
_sources/: index.rst.txt  json.rst.txt  license.rst.txt
_static/: documentation_options.js
api/: pywr.core.html  pywr.html  pywr.nodes.html  pywr.notebook.html  pywr.optimisation.html  pywr.parameters.html  pywr.recorders.html  pywr.solvers.html  pywr.utils.html
appveyor/: build.cmd
asv/: asv.conf.json
conda-recipe/: bld.bat  build.sh  condarc  meta.yaml  run_test.bat  run_test.py  run_test.sh
cookbook/: aggregated_node.html  aggregated_parameter.html  control_curves.html  cookbook.html  dataframes.html  demand_saving.html
docs/: Makefile  extra.css  index.md  license.md  make.bat  tools.md
examples/: hydropower_example.json  hydropower_example.py  simple_model.py  two_reservoir.json  two_reservoir_moea.py
extending_pywr/: extending_pywr_nodes.html  extending_pywr_parameters.html  extending_pywr_recorders.html  index.html
pyplots/: top_hat.py
pywr/: GIT_VERSION.txt  __init__.py  _component.pxd  _component.pyx  _control_curves.pxd  _control_curves.pyx  _core.pxd  _core.pyx  _model.pyx  _parameter.pxd  _parameters.pxd  _parameters.pyx  _recorders.pxd  _recorders.pyx  _version.py  control_curves.py  (+13 more)
(+533 files in other folders)
