[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4", "cython", "numpy"]

# enable version inference
[tool.setuptools_scm]


[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'


[project]
dependencies = [
    "pandas",
    "networkx",
    "scipy",
    "tables",
    "openpyxl",
    "packaging",
]

[project.optional-dependencies]
docs = ["sphinx", "sphinx_rtd_theme", "numpydoc"]
tests = ["pytest"]
dev = ["sphinx", "sphinx_rtd_theme", "numpydoc", "pytest"]
optimisation = ["platypus-opt", "pygmo"]
notebook = ["jupyter", "jinja2", "matplotlib"]
