[project]
name="pywr"
description="Python Water Resource model"
readme="README.rst"
dynamic = ["version"]
authors = [
  {name = "Joshua Arnott", email = "josh@snorfalorpagus.net"},
  {name = "James Tomlinson", email = "tomo.bbe@gmail.com"},
]
requires-python=">=3.10"
dependencies=[
    "pandas",
    "networkx",
    "numpy",
    "scipy",
    "tables",
    "openpyxl",
    "packaging",
]


[project.urls]
Documentation="https://pywr.github.io/pywr/"
Repository="https://github.com/pywr/pywr"

[project.optional-dependencies]
docs = ["sphinx", "sphinx_rtd_theme", "numpydoc", "matplotlib"]
notebook = ["ipython", "jinja2", "matplotlib"]
opt = ["platypus-opt", "pygmo"]

[dependency-groups]
dev = ["pytest", "platypus-opt", "black"]


[build-system]
requires = ["setuptools", "setuptools-scm>=8", "cython>=3", "numpy"]
build-backend = "setuptools.build_meta"



# enable version inference
[tool.setuptools_scm]
version_file = "pywr/_version.py"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
